fix : resolve layout shift (CLS)

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -15,7 +15,10 @@
 .about-wrapper{
     margin: 2rem 0;
 }
-
+.about-image > img{
+    width: 400px;
+    height: 223px;
+}
 /* right side */
 
 .about-title>h2{
@@ -41,6 +44,7 @@
     }
     .about-image>img{
     width: 300px;
+    height: 167.25px;
 }
 
 }
